--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
       <img src="images/sleeping-on-trains.jpg" alt="Путешествия по Росиии" class="lead__image">
       <p class="lead__caption">Ваша полка - верхняя</p>
     </section>
+    <section class="intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+      <ul class="intro__list">
+        <li class="intro__item">Часовых поясов <span class="intro__value">11</span></li>
+        <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__value">12</span></li>
+        <li class="intro__item">Объектов культурного наследия ЮНЕСКО <span class="intro__value">16</span></li>
+        <li class="intro__item">Природных заповедников <span class="intro__value">105</span></li>
+        <li class="intro__item">Аэропортов <span class="intro__value">241</span></li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
