--- a/index.html
+++ b/index.html
@@ -110,6 +110,23 @@
         </div>
       </article>
     </section>
+    <section class="cover offset-block">
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+        <h3 class="cover__title">До Байкала «на собаках»</h3>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p></a>
+    </section>
   </main>
+  <footer class="footer page__footer">
+    <nav class="footer__menu">
+      <ul class="footer__list">
+        <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+        <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+        <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+        <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+        <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+      </ul>
+    </nav>
+    <p class="footer__copyright">© 2020. Савосько Александр</p>
+  </footer>
 </body>
 </html>
