--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
       </article>
     </section>
-    <section class="cover offset-block">
+    <section class="cover page__cover">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <h3 class="cover__title">До Байкала «на собаках»</h3>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p></a>
@@ -126,7 +126,7 @@
         <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
       </ul>
     </nav>
-    <p class="footer__copyright">© 2020. Савосько Александр</p>
+    <p class="footer__copyright">© 2020. Александр Савосько</p>
   </footer>
 </body>
 </html>
