fixed header sizes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
@@ -35,7 +36,7 @@
       <img src="images/dog-in-the-menger.jpg" class="photo-grid__item" alt="Собака на стоге сена">
       <img src="images/trees-in-the-fog.jpg" class="photo-grid__item" alt="Ели в облаках">
       <img src="images/car-on-ice.jpg" class="photo-grid__item" alt="Машина на льду">
-      <img src="images/beach.jpg" class="photo-grid__item" alt=Пляж">
+      <img src="images/beach.jpg" class="photo-grid__item" alt="Пляж">
       <img src="images/mountains.jpg" class="photo-grid__item" alt="Заснеженные горы">
       <img src="images/road-sign.jpg" class="photo-grid__item" alt="Дорожный знак">
       <img src="images/trickle.jpg" class="photo-grid__item" alt="Ручеек в горах">
