--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="#" class="header__lang-link">En</a>
   </header>
   <main class="content">
-    <section class="lead offset-block">
+    <section class="lead page__lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img src="images/sleeping-on-trains.jpg" alt="Путешествия по Росиии" class="lead__image">
