--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>How-To-Travel</title>
+  <title>Путешествия по России</title>
 </head>
-<body class="page page_offset">
-  <header class="header offset-block">
+<body class="page page_offset_large">
+  <header class="header page__header">
     <img src="images/logo.svg" class="header__logo" alt="Россия">
-    <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
-    <a href="#" class="header__lang-link">En</a>
+    <ul class="header__list">
+      <li class="header__item"><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
+      <li class="header__item"><a href="#" class="header__lang-link">En</a></li>
+    </ul>
   </header>
   <main class="content">
     <section class="lead page__lead">
-      <h1 class="lead__title">Путешествия по России</h1>
-      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img src="images/sleeping-on-trains.jpg" alt="Путешествия по Росиии" class="lead__image">
-      <p class="lead__caption">Ваша полка - верхняя</p>
+      <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+      <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
+      <figure class="lead__image-wrapper">
+        <img src="images/sleeping-on-trains.jpg" alt="Путешествия по Росиии" class="lead__image">
+        <figcaption class="lead__caption">ваша полка&nbsp;&mdash; верхняя</figcaption>
+      </figure>
     </section>
-    <section class="intro offset-block">
-      <h2 class="intro__title">Чего мы там не видели?</h2>
-      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+    <section class="intro page__intro">
+      <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
+      <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
         <li class="intro__item">Часовых поясов <span class="intro__value">11</span></li>
         <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__value">12</span></li>
@@ -30,7 +34,7 @@
         <li class="intro__item">Аэропортов <span class="intro__value">241</span></li>
       </ul>
     </section>
-    <section class="photo-grid offset-block">
+    <section class="photo-grid page__photo-grid">
       <img src="images/trains-window.jpg" class="photo-grid__item" alt="Окно поезда">
       <img src="images/mountains-in-the-clouds.jpg" class="photo-grid__item" alt="Горы в облаках">
       <img src="images/dog-in-the-menger.jpg" class="photo-grid__item" alt="Собака на стоге сена">
@@ -53,8 +57,8 @@
         </div>
         <img src="images/stones-in-the-water.jpg" alt="Камни и корни в воде" class="place__image">
         <div class="place__paragraphs">
-          <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-          <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+          <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
+          <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для&nbsp;путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
         </div>
       </article>
       <article class="place places__place">
@@ -65,9 +69,9 @@
         </div>
         <img src="images/kolskiy.jpg" alt="Кольский" class="place__image">
         <div class="place__paragraphs">
-          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
-            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-          <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+          <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг &mdash;
+            тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+          <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.</p>
         </div>
       </article>
       <article class="place places__place">
@@ -78,9 +82,9 @@
         </div>
         <img src="images/altai.jpg" alt="Алтай" class="place__image">
         <div class="place__paragraphs">
-          <p class="place__paragraph">Алтай — одно из красивейших мест в России.
-            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-          <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+          <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
+            В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
+          <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
         </div>
       </article>
       <article class="place places__place">
@@ -92,9 +96,8 @@
         <img src="images/baikal.jpg" alt="Зимний Байкал" class="place__image">
         <div class="place__paragraphs">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-            в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-            к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+            в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
+          <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя&nbsp;к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
         </div>
       </article>
       <article class="place places__place">
@@ -105,29 +108,29 @@
         </div>
         <img src="images/karelia.jpg" alt="Карелия" class="place__image">
         <div class="place__paragraphs">
-          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+          <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+            В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья
+            в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
       </article>
     </section>
     <section class="cover page__cover">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-        <h3 class="cover__title">До Байкала «на собаках»</h3>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p></a>
+        <h3 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h3>
+        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p></a>
     </section>
   </main>
   <footer class="footer page__footer">
     <nav class="footer__menu">
       <ul class="footer__list">
-        <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-        <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-        <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-        <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-        <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+        <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a></li>
+        <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
+        <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
+        <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
+        <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a></li>
       </ul>
     </nav>
-    <p class="footer__copyright">© 2021. Александр Савосько</p>
+    <p class="footer__copyright">&copy; 2021. Александр Савосько</p>
   </footer>
 </body>
 </html>
